Move Uberchords to API and component to avoid app slow down

--- a/src/app.css
+++ b/src/app.css
@@ -5,10 +5,10 @@
     --color-fg-dark: #38322f;
     --color-text-light: #f5f3e7;
     --font-family: 'Cormorant', Georgia, 'Times New Roman', Times, serif;
-    }
-    
-    html {
-        font-size: 1.125rem;
+}
+
+html {
+    font-size: 1.125rem;
 }
 
 body {
@@ -26,6 +26,9 @@ h3 {
     font-family: var(--font-family);
 }
 
+button {
+    font-size: 1.125rem;
+}
 h1,
 h2,
 label,
